added file to lean lets do this

--- a/python recap/recap.ipynb
+++ b/python recap/recap.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "9fe93ac1",
    "metadata": {},
    "outputs": [
@@ -691,50 +691,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "\t{\n",
-      "\t\tcolor: \"red\",\n",
-      "\t\tvalue: \"#f00\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"green\",\n",
-      "\t\tvalue: \"#0f0\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"blue\",\n",
-      "\t\tvalue: \"#00f\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"cyan\",\n",
-      "\t\tvalue: \"#0ff\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"magenta\",\n",
-      "\t\tvalue: \"#f0f\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"yellow\",\n",
-      "\t\tvalue: \"#ff0\"\n",
-      "\t},\n",
-      "\t{\n",
-      "\t\tcolor: \"black\",\n",
-      "\t\tvalue: \"#000\"\n",
-      "\t}\n",
-      "]\n"
+      "\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"sample3.json\", \"r\") as f:\n",
+    "with open(\"hell.json\", \"r\") as f:\n",
     "    content = f.read()\n",
     "print(content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "eb561210",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "2b1e8308",
    "metadata": {},
    "outputs": [
@@ -745,7 +724,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Replace key: value with \"key\": value\u001b[39;00m\n\u001b[32m      7\u001b[39m fixed = re.sub(\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m(\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms*)([a-zA-Z0-9_]+)\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms*:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m1\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m2\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m:\u001b[39m\u001b[33m'\u001b[39m, text)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m data = \u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfixed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(data)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Replace key: value with \"key\": value\u001b[39;00m\n\u001b[32m      7\u001b[39m fixed = re.sub(\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m(\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms*)([a-zA-Z0-9_]+)\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms*:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m1\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m2\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m:\u001b[39m\u001b[33m'\u001b[39m, text)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m data = \u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfixed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(data)\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\json\\__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    341\u001b[39m     s = s.decode(detect_encoding(s), \u001b[33m'\u001b[39m\u001b[33msurrogatepass\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    348\u001b[39m     \u001b[38;5;28mcls\u001b[39m = JSONDecoder\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\json\\decoder.py:348\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    346\u001b[39m end = _w(s, end).end()\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m end != \u001b[38;5;28mlen\u001b[39m(s):\n\u001b[32m--> \u001b[39m\u001b[32m348\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExtra data\u001b[39m\u001b[33m\"\u001b[39m, s, end)\n\u001b[32m    349\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
       "\u001b[31mJSONDecodeError\u001b[39m: Extra data: line 2 column 1 (char 189)"
@@ -763,6 +742,253 @@
     "\n",
     "data = json.loads(fixed)\n",
     "print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "85ff1d48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('hell.json','r') as file:\n",
+    "    data = file.read()\n",
+    "print(data)\n",
+    "\n",
+    "#print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b0b1a468",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 101, 'name': 'Alice Johnson', 'department': 'Engineering', 'is_active': True, 'contact': {'email': 'alice@company.com', 'phone': '555-0101'}}, {'id': 102, 'name': 'Bob Smith', 'department': 'Marketing', 'is_active': False, 'contact': {'email': 'bob@company.com', 'phone': '555-0102'}}, {'id': 103, 'name': 'Charlie Brown', 'department': 'Design', 'is_active': True, 'contact': {'email': 'charlie@company.com', 'phone': '555-0103'}}, {'id': 104, 'name': 'Dana White', 'department': 'Engineering', 'is_active': True, 'contact': {'email': 'dana@company.com', 'phone': '555-0104'}}, {'id': 105, 'name': 'Evan Wright', 'department': 'HR', 'is_active': True, 'contact': {'email': 'evan@company.com', 'phone': '555-0105'}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# 1. Open the file\n",
+    "with open(\"hell.json\", \"r\") as file:\n",
+    "    # 2. Load directly into a dictionary\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# 3. Access the values directly\n",
+    "print(data)\n",
+    "\n",
+    "# Output: \n",
+    "# Name: John\n",
+    "# City: Delhi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5beddaab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success! Found 0 items.\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     19\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSuccess! Found\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(data), \u001b[33m\"\u001b[39m\u001b[33mitems.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m     \u001b[38;5;66;03m# Print the first color to prove it works\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mFirst color:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mcolor\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m json.JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     25\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mStill having trouble: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mIndexError\u001b[39m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# 1. Define the filename\n",
+    "filename = \"hell.json\"\n",
+    "\n",
+    "try:\n",
+    "    # 2. Read the raw text from the file\n",
+    "    with open(filename, \"r\") as file:\n",
+    "        raw_content = file.read()\n",
+    "\n",
+    "    # 3. FIX: Manually wrap the content in brackets to make it a valid list\n",
+    "    # We strip() whitespace just in case there are empty lines at the start/end\n",
+    "    fixed_json = f\"[{raw_content.strip()}]\"\n",
+    "\n",
+    "    # 4. Parse the fixed string\n",
+    "    data = json.loads(fixed_json)\n",
+    "\n",
+    "    # 5. Verify it works\n",
+    "    print(\"Success! Found\", len(data), \"items.\")\n",
+    "    \n",
+    "    # Print the first color to prove it works\n",
+    "    print(\"First color:\", data[0][\"color\"])\n",
+    "\n",
+    "except json.JSONDecodeError as e:\n",
+    "    print(f\"Still having trouble: {e}\")\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Could not find {filename}. Make sure it is in the same folder.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "26c7bca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m     data = json.load(file)\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# find only keys \u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m keys = \u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mkeys\u001b[49m()\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# join them a comma and print\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(keys)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'keys'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "json_content = '{\"Name\": \"Subod\", \"city\": \"Balrghat\",\"Age\": 25}'\n",
+    "with open(\"data.json\",\"w\") as f:\n",
+    "    f.write(json_content)\n",
+    "\n",
+    "# solutions starts here \n",
+    "with open(\"hell.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# find only keys \n",
+    "keys = data.keys()\n",
+    "\n",
+    "# join them a comma and print\n",
+    "print(keys)\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b891d209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "green\n",
+      "blue\n",
+      "cyan\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"hell.json\", \"r\") as file:\n",
+    "    data = json.load(file) # Works perfectly now\n",
+    "\n",
+    "for item in data:\n",
+    "    p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0d690453",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 101, 'name': 'Alice Johnson', 'department': 'Engineering', 'is_active': True, 'contact': {'email': 'alice@company.com', 'phone': '555-0101'}}, {'id': 102, 'name': 'Bob Smith', 'department': 'Marketing', 'is_active': False, 'contact': {'email': 'bob@company.com', 'phone': '555-0102'}}, {'id': 103, 'name': 'Charlie Brown', 'department': 'Design', 'is_active': True, 'contact': {'email': 'charlie@company.com', 'phone': '555-0103'}}, {'id': 104, 'name': 'Dana White', 'department': 'Engineering', 'is_active': True, 'contact': {'email': 'dana@company.com', 'phone': '555-0104'}}, {'id': 105, 'name': 'Evan Wright', 'department': 'HR', 'is_active': True, 'contact': {'email': 'evan@company.com', 'phone': '555-0105'}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"fol.json\",\"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fed88ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "❌ JSON ERROR DETECTED!\n",
+      "------------------------------------------------\n",
+      "Type of Error:   Extra data\n",
+      "Location:        Line 2, Column 1\n",
+      "Character Index: 189\n",
+      "------------------------------------------------\n",
+      "Here is Line 2 in your file:\n",
+      "👉 {\"PassengerId\":\"2\",\"Survived\":\"1\",\"Pclass\":\"1\",\"Name\":\"Cumings, Mrs. John Bradley (Florence Briggs Thayer)\",\"Sex\":\"female\",\"Age\":38,\"SibSp\":\"1\",\"Parch\":\"0\",\"Ticket\":\"PC 17599\",\"Fare\":71.2833,\"Cabin\":\"C85\",\"Embarked\":\"C\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "filename = \"titanic.json\"  # <--- Put your actual filename here\n",
+    "\n",
+    "try:\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "        print(\"✅ Success! The JSON is valid.\")\n",
+    "\n",
+    "except json.JSONDecodeError as e:\n",
+    "    print(\"\\n❌ JSON ERROR DETECTED!\")\n",
+    "    print(f\"------------------------------------------------\")\n",
+    "    print(f\"Type of Error:   {e.msg}\")\n",
+    "    print(f\"Location:        Line {e.lineno}, Column {e.colno}\")\n",
+    "    print(f\"Character Index: {e.pos}\")\n",
+    "    print(f\"------------------------------------------------\")\n",
+    "    \n",
+    "    # Optional: Read the file again to show you exactly what is at that line\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        lines = f.readlines()\n",
+    "        \n",
+    "        # Computers count from 0, but humans count from 1. \n",
+    "        # So we subtract 1 to get the correct list index.\n",
+    "        error_line_index = e.lineno - 1\n",
+    "        \n",
+    "        # Check if the line exists (to avoid crashing the error reporter)\n",
+    "        if error_line_index < len(lines):\n",
+    "            print(f\"Here is Line {e.lineno} in your file:\")\n",
+    "            print(f\"👉 {lines[error_line_index].strip()}\")"
    ]
   }
  ],
