we are looking on the file

--- a/python recap/recap.ipynb
+++ b/python recap/recap.ipynb
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "535b4a9d",
    "metadata": {},
    "outputs": [
@@ -1072,11 +1072,11 @@
     "    print(f\" character index    {e.pos}\")\n",
     "\n",
     "#check where the error are line by line \n",
-    "with open(filename,\"r\") as f:\n",
-    "    lines = file.readlines()\n",
+    "    with open(filename,\"r\") as f:\n",
+    "       lines = f.readlines()\n",
     "\n",
     "    # we wil find error index \n",
-    "    error_index_line = e.lineno\n",
+    "    error_index_line = e.lineno -1\n",
     "\n",
     "       "
    ]
