resolved 8 th questions

--- a/python recap/recap.ipynb
+++ b/python recap/recap.ipynb
@@ -1297,22 +1297,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bc36483d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "successfully done \n"
+     ]
+    }
+   ],
    "source": [
+    "import json \n",
+    "import csv\n",
     "csv_file = \"what.csv\"\n",
     "json_file = \"change2.json\"\n",
     "\n",
     "with open(json_file, \"r\", encoding = \"utf-8\") as f:\n",
     "    reader = json.load(f)\n",
     "\n",
-    "headers = data[0].keys()\n",
+    "keys = reader[0].keys()\n",
     "\n",
-    "with open(csv_file, \"w\", newline=\"\", encoding =\" utf-8\" ) as f:\n",
-    "    writer = csv.DictWriter(f,fieldnames = headers)\n",
-    "    writer.writeheader()"
+    "with open(csv_file, \"w\", newline=\"\", encoding =\"utf-8\" ) as f:\n",
+    "    writer = csv.DictWriter(f,fieldnames = keys)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(reader)\n",
+    "\n",
+    "print(\"successfully done \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "82a6db1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "csv_file = \"what.csv\"\n",
+    "json_file = \"change2.json\"\n",
+    "\n",
+    "# Read JSON\n",
+    "with open(json_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "    reader = json.load(f)\n",
+    "\n",
+    "# Extract keys from the first object\n",
+    "keys = reader[0].keys()\n",
+    "\n",
+    "# Write CSV\n",
+    "with open(csv_file, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames=keys)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(reader)  # write all rows\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1775dfc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "json is valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def valid_json_finder(json_file):\n",
+    "    \n",
+    "    try:\n",
+    "        with open(json_file, \"r\", encoding = \"utf-8\") as f:\n",
+    "            print(\"json is valid\")\n",
+    "\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        print(\"Invalied json\")\n",
+    "        print(f\" The error message we are getting {e.msg}\")\n",
+    "        print(f\" line where getting error {e.lineno}\")\n",
+    "        print(f\" the columns we are getting error{e.colno}\")\n",
+    "\n",
+    "        with open(json_file,\"r\",encoding=\"utf-8\") as f:\n",
+    "            lines = f.readlines()\n",
+    "\n",
+    "\n",
+    "        print(f\"Problematic line : {lines[e.lineno -1].strip()}\")\n",
+    "        \n",
+    "valid_json_finder(\"titanic.json\")"
    ]
   }
  ],
