we are about to print csv file with keys

--- a/python recap/recap.ipynb
+++ b/python recap/recap.ipynb
@@ -1391,6 +1391,58 @@
     "        \n",
     "valid_json_finder(\"titanic.json\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51e5cb70",
+   "metadata": {},
+   "source": [
+    "🔟 Read a text file and count how many rows contain numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b10a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This is a dummy text file created using Python.\\n', 'It contains multiple lines of example text.\\n', 'You can modify this content as needed.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Specify the filename for the dummy text file\n",
+    "filename = \"dummy_file.txt\"\n",
+    "\n",
+    "# Content to write to the dummy file\n",
+    "content = \"This is a dummy text file created using Python.\\n\" \\\n",
+    "          \"It contains multiple lines of example text.\\n\" \\\n",
+    "          \"You can modify this content as needed.\"\n",
+    "\n",
+    "# Open the file in write mode ('w') and write the content\n",
+    "with open(filename, \"w\") as f:\n",
+    "    f.write(content)\n",
+    "\n",
+    "with open(filename, \"r\") as file:\n",
+    "    lines = file.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ca27c9e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines_to_write = [\"Line 1\\n\", \"Line 2\\n\", \"Line 3\\n\"]\n",
+    "\n",
+    "with open(\"dummy_file.txt\", \"w\") as file:\n",
+    "    file.writelines(lines_to_write)"
+   ]
   }
  ],
  "metadata": {
