we are able to add find nulll vaues in th file

--- a/python recap/dataana.ipynb
+++ b/python recap/dataana.ipynb
@@ -285,6 +285,36 @@
     "    sample_value = reader[0][col]\n",
     "    print(f\"{col}  ---> {infer_types(sample_value)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "36d025c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Missing values percolumn:\n",
+      "{'Survived': 0, 'Pclass': 0, 'Name': 0, 'Sex': 0, 'Age': 0, 'Siblings/Spouses Aboard': 0, 'Parents/Children Aboard': 0, 'Fare': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nMissing values percolumn:\")\n",
+    "missing = {col: 0 for col in reader[0].keys()}\n",
+    "for row in reader:\n",
+    "    for col , val in row.items():\n",
+    "        if val.strip() == \"\" or val.lower() in [\"null\",\"none\",\"nan\"]:\n",
+    "           missing[col] += 1\n",
+    "\n",
+    "print(missing)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
